bug fixes(go back button/ comic covers image not behaving properly) + removed container rotation + weekly update

--- a/src/App.css
+++ b/src/App.css
@@ -140,7 +140,7 @@ header {
   justify-content: center;
   background-color: black;
   overflow: hidden;
-  rotate: 2deg;
+  /* rotate: -2deg; */
   box-shadow: -1px 9px 25px 8px rgba(0, 0, 0, 0.45),
     inset 0px 70px 88px -32px rgba(255, 3, 3, 0.34);
   width: 79.5vw;
@@ -172,7 +172,7 @@ header {
 
 /*------------------- MAIN -------------------*/
 
-/*---------------- CONTENT ONE ---------------*/
+/*---------------- CONTENT ---------------*/
 
 .content {
   /* border: solid red; */
@@ -211,7 +211,7 @@ header {
   height: 466px;
   justify-content: space-between;
   align-items: center;
-  rotate: -2deg;
+  /* rotate: -2deg; */
   overflow: scroll;
   cursor: grab;
   overflow-y: hidden;
@@ -230,6 +230,7 @@ header {
   position: relative;
   transition: all 250ms;
   scroll-snap-align: end;
+  rotate: -2deg;
 }
 
 .comic button {
@@ -299,37 +300,7 @@ header {
   display: flex;
 }
 
-/*---------------- CONTENT ONE ---------------*/
-
-/*---------------- CONTENT TWO ---------------*/
-
-.middle2 {
-  /* border: solid purple; */
-  display: flex;
-  width: 100%;
-  height: 466px;
-  justify-content: space-between;
-  align-items: center;
-  rotate: -2deg;
-  overflow: scroll;
-  cursor: grab;
-  overflow-y: hidden;
-}
-
-.middle2.active {
-  cursor: grabbing;
-}
-
-.middle2 p {
-  font-family: "roboto", sans-serif;
-  font-size: 1rem;
-  position: absolute;
-  color: rgb(100, 100, 100);
-  transition: all 150ms ease-in-out;
-  text-align: end;
-}
-
-/*---------------- CONTENT TWO ---------------*/
+/*---------------- CONTENT ---------------*/
 
 /*------------------- NEWS -------------------*/
 
