--- a/src/Modal/Modal.css
+++ b/src/Modal/Modal.css
@@ -484,9 +484,9 @@
 .activeComicInfo {
   display: flex;
   flex-direction: column;
-  width: fit-content;
+  width: 100%;
   justify-content: space-between;
-  height: 100%;
+  height: auto;
   gap: 16px;
   padding-right: 0.7%;
 }
